# hgmp

./: CHANGELOG.md  LICENSE  README.md  hgmp.cabal
cbits/: wrappers.c
examples/: primes.hs
src/Numeric/GMP/: Types.hsc  Utils.hs
tests/: Main.hs
