name:                hgmp
version:             0
synopsis:            Haskell interface to GMP
description:         Currently, types with Storable instances, and marshalling
                     between Integer and Rational and the corresponding GMP
                     types.  That is, enough to allow FFI to GMP code (whether
                     in GMP itself or in third-party code that uses GMP).
                     .
                     Supports only GHC with integer-gmp, this might change if
                     there's any demand.

-- future function bindings may be machine-translated from gmp.h (LGPL-3/GPL-2)
license:             BSD3
license-file:        LICENSE

author:              Claude Heiland-Allen
maintainer:          claude@mathr.co.uk
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Numeric.GMP.Utils, Numeric.GMP.Types
  build-depends:       base >=4.8 && <4.9
                     , integer-gmp >= 1.0 && < 1.1
                     , ghc-prim >= 0.4 && < 0.5
  build-tools:         hsc2hs
  hs-source-dirs:      src
  c-sources:           cbits/wrappers.c
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                       GeneralizedNewtypeDeriving
                       ForeignFunctionInterface
                       MagicHash
                       UnboxedTuples
  ghc-options:         -Wall

test-suite Main
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  build-depends:       base
                     , hgmp
                     , QuickCheck >= 2.8 && < 2.9
  default-language:    Haskell2010
  other-extensions:    ForeignFunctionInterface
                       TemplateHaskell
